@@ -645,7 +645,7 @@ UNITS = [["bucket" , ["bucket", "buckets", "bckt."]],
          ["grains", ["grain", "grains"]],
          ["dram", ["dram", "drams"]],
          ["drop",["drop"]],
-         ["fl. oz.",["fl oz","fluid ounce","fluid ounces","fl. oz.","fl oz.","fl. oz"]],
+         ["fl oz",["fl oz","fluid ounce","fluid ounces","fl. oz.","fl oz.","fl. oz"]],
          ['',['each','ea','ea.']],
          ["tsp.", ["teaspoon","tsp", "tsp.","tea spoon", "tsps.", "teaspoons", "tea spoons", "Teaspoon", "Teaspoons","t",'ts',"Ts.","Tsp.","Tsp"]],
          ["Tbs.", ["tablespoon","tbs", "tbsp", "tbs.", "tbsp.", "table spoon", "tbsps.", "tablespoons", "Tablespoon", "T",'tb',"Tbs.", "Tbsp", "Tbsp."]],
